<resources>
    <string name="app_name">GitTestApp</string>
    <string name="red_btn">Red</string>
    <string name="green_btn">Green</string>
    <string name="blue_btn">Blue</string>
    <string name="black_btn">Black</string>

    <string name="idel_text">Choose color.</string>
    <string name="red_txt">Red Text!</string>
    <string name="blue_txt">Blue Text!</string>
    <string name="green_txt">Green Text!</string>
    <string name="black_txt">Black Text!</string>
</resources>
